4File system: cards.json db added

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <span class="category-badge" id="categoryBadge"></span>
 
   <div id="gameArea">
-    <div class="prompt-label">Übersetze ins Deutsche</div>
+    <!--<div class="prompt-label">Übersetze ins Deutsche</div>-->
     <div class="prompt-text" id="promptText"></div>
     <div class="prompt-sub" id="promptSub"></div>
     <input id="answer" type="text" autocomplete="off" spellcheck="false" placeholder="Tippe hier…" />
